<resources>
    <string name="app_name">Roomify</string>
    <string name="headerText">Roomify</string>
    <string name="clasess_1_n8_30_9_50">Class 1\n8:30 - 9:50</string>
    <string name="clasess_3_n12_00_13_20">Class 3\n12:00 - 13:20</string>
    <string name="clasess_5_n15_10_16_30">Class 5\n15:10 - 16:30</string>
    <string name="clasess_2_n10_00_11_20">Class 2\n10:00 - 11:20</string>
    <string name="clasess_4_n13_30_14_50">Class 4\n13:30 - 14:50</string>
    <string name="clasess_6_n16_40_18_00">Class 6\n16:40 - 18:00</string>
    <string name="audience">Audience</string>
    <string name="type">Type</string>
    <string name="comment">Comment</string>
    <string name="all">All</string>
    <string name="_2f">2F</string>
    <string name="_3f">3F</string>
    <string name="_4f">4F</string>
    <string name="_5f">5F</string>
    <string name="_6f">6F</string>
    <string name="other">Other</string>
    <string name="api_failure">API failure</string>
    <string name="no_internet">No internet</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="lesson_time">Lesson Time</string>
    <string name="lesson_number">Lesson Number</string>
    <string name="lesson_description">Lesson Description</string>
    <string name="show_schedule">Show Schedule</string>
    <string name="enter_group_name">Enter group name</string>
</resources>