<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">


    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/lesson_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/lesson_number"
        android:textStyle="bold"
        android:textColor="@color/textColors"
        />

    <TextView
        android:id="@+id/lesson_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/lesson_time"
        android:textColor="@color/textColors"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/lesson_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson_description"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"
        />
</LinearLayout>
